# ibcp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  codes.awk  codes.txt  commandhandlers.cpp  commandhandlers.h  commandline.cpp  commandline.h  dictionary.cpp  dictionary.h  donestack.cpp  donestack.h  editbox.cpp  editbox.h  encoder.cpp  encoder.h  enums.awk  erector.cpp  erector.h  errorlist.cpp  errorlist.h  ibcp.cpp  ibcp.h  ibcp.qrc  ibcp.vpj  ibcp_config.h.in  list.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memtest.in  memtestn.in  parser.cpp  parser.h  program.cpp  program.h  (+40 more)
basic/: basic.cpp  basic.h  command.cpp  command.h  commands.h  input.cpp  let.cpp  operand.cpp  operator.cpp  operator.h  print.cpp
test/: constructors.txt  cpp11.cpp  encoder01.out  encoder01.txt  encoder02.out  encoder02.txt  encoder03.out  encoder03.txt  expression1.out  expression1.txt  expression2.out  expression2.txt  expression3.out  expression3.txt  expression4.out  expression4.txt  ibcp-ld2.19.supp  ibcp.supp  ibcp.supp.in  numbers.txt  parser1.txt  parser2.txt  parser3.txt  parser4.txt  parser5.txt  stack.txt  stack2.txt  string.txt  test_cons.cpp  test_cons.vpj  test_nums.cpp  test_nums.vpj  test_ops.cpp  test_parser.cpp  test_parser.vpj  test_stack.cpp  test_stack.vpj  test_stack2.cpp  test_string.cpp  test_string.vpj  (+50 more)
